# krb5-anonsvn

./: README
aaa/: testing
src/: ChangeLog  Makefile.in  acconfig.h  aclocal.m4  configure.in  patchlevel.h
src/admin/create/: ChangeLog
src/admin/edit/: ChangeLog  configure.in  dump.c  dumpv4.c
src/appl/bsd/: ChangeLog  krlogin.c  krsh.c
src/appl/gss-sample/: ChangeLog  gss-client.c
src/appl/gssftp/ftp/: ChangeLog
src/appl/gssftp/ftpd/: ChangeLog  ftpcmd.y  ftpd.c
src/appl/popper/: pop_init.c  pop_pass.c
src/appl/telnet/libtelnet/: ChangeLog
src/clients/kinit/: ChangeLog  kinit.M  kinit.c
src/clients/ksu/: ChangeLog
src/config/: ChangeLog  Imake.rules  lib.in  libobj.in  post.in  pre.in  recurse.in  ultrix.cf  vaxbsd.cf  win-post.in  windows.in
src/include/: ChangeLog  Makefile.in  k5-int.h  krb5.hin  osconf.hin  win-mac.h
src/include/kerberosIV/: krb.h
src/include/krb5/: ChangeLog  Makefile.in  configure.in  kdb.h  preauth_plugin.h
src/kadmin/: ChangeLog  Makefile  configure.in  mit-letter
src/kadmin/cli/: ChangeLog  configure.in  kadmin.1  keytab.c  ss_wrapper.c
src/kadmin/config.mk/: ChangeLog  architecture  rules  site.def  template
src/kadmin/create/: ChangeLog  configure.in  kadm5_create.c
src/kadmin/create/attic/: ovsec_adm_create.c
src/kadmin/dbutil/: ChangeLog  Makefile.in  Makefile.ov  configure  configure.in  dump.c  dumpv4.c  kdb5_util.c
src/kadmin/export/: ChangeLog  configure.in  export.c
src/kadmin/export/unit-test/: Makefile  dotest.sh
src/kadmin/import/: ChangeLog  configure.in  import.c  import.h  misc.c  ovsec_adm_import.c  strtok.c
src/kadmin/kdbkeys/: ChangeLog  Makefile  configure.in  do-test.pl  kdbkeys.c
src/kadmin/keytab/: ChangeLog  keytab.c
src/kadmin/keytab/unit-test/: Makefile.ov  helpers.exp
src/kadmin/ktutil/: ChangeLog  configure.in
src/kadmin/passwd/: ChangeLog  configure.in  kpasswd.c  tty_kpasswd.c  xm_kpasswd.c
src/kadmin/server/: ChangeLog  Makefile.in  acls.l  configure.in  kadm_rpc_svc.c  misc.h  ovsec_kadmd.c
src/kadmin/testing/proto/: ChangeLog  kdc.conf.proto  krb5.conf.proto
src/kadmin/testing/scripts/: ChangeLog  env-setup.shin  init_db  make-host-keytab.pl.in  start_servers_local  stop_servers_local
src/kadmin/v4server/: ChangeLog  Makefile.in  admin_server.c  configure.in  kadm_ser_wrap.c  kadm_server.c
src/kadmin/v5passwdd/: ChangeLog
src/kdc/: ChangeLog  Makefile.in  configure.in  kerberos_v4.c
src/krb524/: ChangeLog  Makefile.in  cnv_tkt_skey.c  configure.in  krb524d.c
src/lib/: ChangeLog  Makefile.in  configure.in  gssapi.def  gssapi16.def  krb5.def  krb5_16.def  krb5_32.def
src/lib/crypto/: ChangeLog  Makefile.in  configure.in
src/lib/des425/: ChangeLog  Makefile.in  read_passwd.c
src/lib/gssapi/: ChangeLog  Makefile.in  configure.in
src/lib/kadm/: ChangeLog  Makefile.in
src/lib/kadm5/: ChangeLog  Makefile.in  Makefile.ov  adb.h  adb_free.c  adb_openclose.c  adb_policy.c  adb_principal.c  admin_xdr.h  alt_prof.c  chpass_util.c  client_init.c  client_internal.h  client_principal.c  clnt_policy.c  clnt_privs.c  configure.in  server_acl.l  svr_iters.c  svr_principal.c
src/lib/kdb/: ChangeLog  Makefile.in  configure.in  kdb_cpw.c  kdb_dbm.c
src/lib/krb4/: ChangeLog  Makefile.in  configure.in  g_cred.c  g_krbhst.c  g_phost.c  g_pw_in_tkt.c  g_svc_in_tkt.c  g_tkt_svc.c  in_tkt.c  kname_parse.c  memcache.c  memcache.h  mk_auth.c  mk_err.c  mk_priv.c  mk_req.c  rd_err.c  rd_priv.c  rd_req.c  rd_safe.c  realmofhost.c  recvauth.c  save_creds.c  win_store.c  win_time.c
src/lib/krb5/: ChangeLog  Makefile.in  configure.in  crypto_glue.c
src/lib/krb5/asn.1/: ChangeLog  Makefile.in
src/lib/krb5/ccache/: ChangeLog  Makefile.in
src/lib/krb5/ccache/file/: ChangeLog  Makefile.in  configure.in
src/lib/krb5/ccache/memory/: Makefile.in
src/lib/krb5/ccache/stdio/: Makefile.in
src/lib/krb5/error_tables/: ChangeLog  Makefile.in
src/lib/krb5/free/: ChangeLog  Makefile.in  f_data.c
src/lib/krb5/keytab/: ChangeLog  Makefile.in  ktbase.c
src/lib/krb5/keytab/file/: ChangeLog  Makefile.in  ktf_g_ent.c
src/lib/krb5/krb/: ChangeLog  Makefile.in  auth_con.c  configure.in  conv_princ.c  init_ctx.c  recvauth.c  serialize.c
src/lib/krb5/os/: .Sanitize  ChangeLog  Makefile.in  appdefault.c  c_ustime.c  configure.in  ktdefname.c  net_read.c  net_write.c
src/lib/krb5/posix/: ChangeLog  Makefile.in  daemon.c
src/lib/krb5/rcache/: ChangeLog  Makefile.in  rc_base.c  rc_base.h  rc_dfl.c  rc_dfl.h  rc_io.c  rc_io.h
src/lib/rpc/: ChangeLog  Makefile.in  auth_gssapi.c  auth_gssapi.h  auth_gssapi_misc.c  clnt_perror.c  configure.in  getrpcent.c  netdb.h  rpc.h  rpc_dtablesize.c  svc_auth_gssapi.c  types.h  xdr_alloc.c
src/mac/: K5Library.exp  MIT Kerberos.r  Makefile  Makefile.tmpl  Release notes  version.r
src/slave/: kprop.c
src/tests/: ChangeLog
src/util/: ChangeLog  Makefile.in  configure.in  lndir  makeshlib.sh
src/util/autoconf/: ChangeLog  acgeneral.m4  autoconf.info  autoheader.sh
src/util/dyn/: ChangeLog  Makefile.in  configure.in  dyn_insert.c
src/util/et/: ChangeLog  Makefile.in  com_err.c  com_err.h  configure.in  error_message.c  error_table.h  et_c.awk  init_et.c  internal.h
src/util/profile/: ChangeLog  Makefile.in  configure.in  prof_err.et  prof_file.c  prof_get.c  prof_init.c  prof_int.h  prof_parse.c  prof_set.c  prof_threads.c  prof_threads.h  prof_tree.c  profile.exp  profile.hin  profile.pbexp
src/util/pty/: ChangeLog  Makefile.in  configure.in  update_utmp.c
src/util/send-pr/: Makefile
src/util/ss/: ChangeLog  Makefile.in  configure.in  help.c
src/util/windows/: Makefile.in
src/windows/: Makefile.in
src/windows/cns/: ChangeLog  Makefile.in  cns.c  cns.h  cnsres5.rc  krbini.h
src/windows/gina/: Makefile.in  debug.c  debug.h  dialogs.rc  gina.c  gina.def  gina.h  gina.hlp  globals.h  logon.c  options.c  out.c  protos.h  readme.txt  resids.h  shutdown.c  structs.h  util.c  welcome.c
src/windows/gss/: ChangeLog  Makefile.in
src/windows/wintel/: Makefile.in  screen.c  telnet.c  telnet.rc
(+105 files in other folders)
