AC_INIT(ct.y)
CONFIG_RULES
AC_PROG_LEX
AC_PROG_YACC
AC_PROG_AWK
AC_PROG_ARCHIVE
AC_PROG_ARCHIVE_ADD
AC_PROG_RANLIB
HAVE_YYLINENO
AC_FUNC_CHECK(strdup,AC_DEFINE(HAS_STRDUP))
CHECK_DIRENT
CHECK_WAIT_TYPE
CHECK_SIGNALS
CHECK_SIGPROCMASK
AC_RETSIGTYPE
AC_HEADER_STDARG
AC_CHECK_HEADERS(stdlib.h)
dnl ss.h -> $(BUILDTOP)/include/ss
dnl mit-sipb-copyright.h -> $(BUILDTOP)/include/ss
dnl ss_err.h -> $(BUILDTOP)/include/ss
V5_AC_OUTPUT_MAKEFILE
